# Apollo-server

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  temp.py  test.py
chromadb_store/: chroma.sqlite3
chromadb_store/df9c26f9-f177-4be5-82d7-e181a2302c66/: index_metadata.pickle
nodes/: PresentationNodes.py  QA_Agent.py  QuizNode.py
outputs/: Database normalization.json  Differential Equations and the ways to solve them.json  Differential Equations.json  Simple and Compound Interest.json  Teach me Differential Equations.json  Teach me RNN.json  Teach me oops in python.json
prisma/: schema.prisma
routes/: lecture_routes.py
tools/: SearchTools.py
utils/: add_to_db.py  heygen.py  scarper.py
workflows/: PresentationWorkflow.py
